lab1/Haskell/ParCalc.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParCalc.y
-----------------------------------------------------------------------------

state 180 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Char -> L_charac                                   (1)
	Double -> L_doubl                                  (2)
	Integer -> L_integ                                 (3)
	String -> L_quoted                                 (4)
	Id -> L_Id                                         (5)
	Program -> ListDef                                 (6)
	Def -> 'using' QualConst ';'                       (7)
	Def -> GenType ListInit ';'                        (8)
	Def -> GenType Id '(' ListArg ')' '{' ListStm '}'   (9)
	Def -> GenType Id '(' ListArg ')' ';'              (10)
	Def -> 'typedef' GenType Id ';'                    (11)
	ListDef ->                                         (12)
	ListDef -> Def ListDef                             (13)
	ListArg ->                                         (14)
	ListArg -> Arg                                     (15)
	ListArg -> Arg ',' ListArg                         (16)
	Arg -> GenType Init                                (17)
	Arg -> GenType                                     (18)
	Stm -> GenType ListInit ';'                        (19)
	Stm -> Exp ';'                                     (20)
	Stm -> 'return' Stm                                (21)
	Stm -> 'while' '(' Exp ')' Stm                     (22)
	Stm -> 'for' '(' GenType Init ';' Exp ';' Exp ')' Stm   (23)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (24)
	Stm -> '{' ListStm '}'                             (25)
	Stm -> 'typedef' GenType Id ';'                    (26)
	Stm -> 'if' '(' Exp ')' Stm                        (27)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (28)
	ListStm ->                                         (29)
	ListStm -> Stm ListStm                             (30)
	Exp1 -> 'throw' Exp1                               (31)
	Exp1 -> Exp2                                       (32)
	Exp2 -> Exp3 '=' Exp2                              (33)
	Exp2 -> Exp3 '+=' Exp2                             (34)
	Exp2 -> Exp3 '-=' Exp2                             (35)
	Exp2 -> Exp3 '?' Exp ':' Exp2                      (36)
	Exp2 -> Exp3                                       (37)
	Exp3 -> Exp3 '||' Exp4                             (38)
	Exp3 -> Exp4                                       (39)
	Exp4 -> Exp4 '&&' Exp5                             (40)
	Exp4 -> Exp5                                       (41)
	Exp8 -> Exp8 '==' Exp9                             (42)
	Exp8 -> Exp8 '!=' Exp9                             (43)
	Exp8 -> Exp9                                       (44)
	Exp9 -> Exp9 '<' Exp10                             (45)
	Exp9 -> Exp9 '<=' Exp10                            (46)
	Exp9 -> Exp9 '>=' Exp10                            (47)
	Exp9 -> Exp9 '>' Exp10                             (48)
	Exp9 -> Exp10                                      (49)
	Exp10 -> Exp10 '<<' Exp11                          (50)
	Exp10 -> Exp10 '>>' Exp11                          (51)
	Exp10 -> Exp11                                     (52)
	Exp11 -> Exp11 '+' Exp12                           (53)
	Exp11 -> Exp11 '-' Exp12                           (54)
	Exp11 -> Exp12                                     (55)
	Exp12 -> Exp12 '*' Exp13                           (56)
	Exp12 -> Exp12 '/' Exp13                           (57)
	Exp12 -> Exp12 '%' Exp13                           (58)
	Exp12 -> Exp13                                     (59)
	Exp13 -> '++' Exp13                                (60)
	Exp13 -> '--' Exp13                                (61)
	Exp13 -> '!' Exp13                                 (62)
	Exp13 -> '*' Exp13                                 (63)
	Exp13 -> Exp14                                     (64)
	Exp14 -> Exp14 '++'                                (65)
	Exp14 -> Exp14 '--'                                (66)
	Exp14 -> Exp14 '[' Exp ']'                         (67)
	Exp14 -> Exp14 '(' ListExp ')'                     (68)
	Exp14 -> Exp14 '.' Exp15                           (69)
	Exp14 -> Exp14 '->' Exp15                          (70)
	Exp14 -> Exp15                                     (71)
	Exp15 -> Integer                                   (72)
	Exp15 -> Double                                    (73)
	Exp15 -> ListString                                (74)
	Exp15 -> Char                                      (75)
	Exp15 -> QualConst                                 (76)
	Exp15 -> '(' Exp ')'                               (77)
	ListExp ->                                         (78)
	ListExp -> Exp                                     (79)
	ListExp -> Exp ',' ListExp                         (80)
	ListString -> String                               (81)
	ListString -> String ListString                    (82)
	QualConst -> ListId                                (83)
	ListId -> Id                                       (84)
	ListId -> Id '::' ListId                           (85)
	Type -> 'char'                                     (86)
	Type -> 'bool'                                     (87)
	Type -> 'double'                                   (88)
	Type -> 'int'                                      (89)
	Type -> 'void'                                     (90)
	Type -> QualConst                                  (91)
	GenType -> Type                                    (92)
	GenType -> 'const' Type                            (93)
	GenType -> Type '&'                                (94)
	GenType -> 'const' Type '&'                        (95)
	Init -> Id                                         (96)
	Init -> Id '=' Exp                                 (97)
	ListInit -> Init                                   (98)
	ListInit -> Init ',' ListInit                      (99)
	Exp -> Exp1                                        (100)
	Exp5 -> Exp6                                       (101)
	Exp6 -> Exp7                                       (102)
	Exp7 -> Exp8                                       (103)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'char'         { PT _ (TS _ 34) }
	'const'        { PT _ (TS _ 35) }
	'do'           { PT _ (TS _ 36) }
	'double'       { PT _ (TS _ 37) }
	'else'         { PT _ (TS _ 38) }
	'for'          { PT _ (TS _ 39) }
	'if'           { PT _ (TS _ 40) }
	'int'          { PT _ (TS _ 41) }
	'return'       { PT _ (TS _ 42) }
	'throw'        { PT _ (TS _ 43) }
	'typedef'      { PT _ (TS _ 44) }
	'using'        { PT _ (TS _ 45) }
	'void'         { PT _ (TS _ 46) }
	'while'        { PT _ (TS _ 47) }
	'{'            { PT _ (TS _ 48) }
	'||'           { PT _ (TS _ 49) }
	'}'            { PT _ (TS _ 50) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Char            rule  1
	Double          rule  2
	Integer         rule  3
	String          rule  4
	Id              rule  5
	Program         rule  6
	Def             rules 7, 8, 9, 10, 11
	ListDef         rules 12, 13
	ListArg         rules 14, 15, 16
	Arg             rules 17, 18
	Stm             rules 19, 20, 21, 22, 23, 24, 25, 26, 27, 28
	ListStm         rules 29, 30
	Exp1            rules 31, 32
	Exp2            rules 33, 34, 35, 36, 37
	Exp3            rules 38, 39
	Exp4            rules 40, 41
	Exp8            rules 42, 43, 44
	Exp9            rules 45, 46, 47, 48, 49
	Exp10           rules 50, 51, 52
	Exp11           rules 53, 54, 55
	Exp12           rules 56, 57, 58, 59
	Exp13           rules 60, 61, 62, 63, 64
	Exp14           rules 65, 66, 67, 68, 69, 70, 71
	Exp15           rules 72, 73, 74, 75, 76, 77
	ListExp         rules 78, 79, 80
	ListString      rules 81, 82
	QualConst       rule  83
	ListId          rules 84, 85
	Type            rules 86, 87, 88, 89, 90, 91
	GenType         rules 92, 93, 94, 95
	Init            rules 96, 97
	ListInit        rules 98, 99
	Exp             rule  100
	Exp5            rule  101
	Exp6            rule  102
	Exp7            rule  103

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'const'        shift, and enter state 13
	'double'       shift, and enter state 14
	'int'          shift, and enter state 15
	'typedef'      shift, and enter state 16
	'using'        shift, and enter state 17
	'void'         shift, and enter state 18
	L_Id           shift, and enter state 19
	%eof           reduce using rule 12

	Id             goto state 3
	Program        goto state 4
	Def            goto state 5
	ListDef        goto state 6
	QualConst      goto state 7
	ListId         goto state 8
	Type           goto state 9
	GenType        goto state 10

State 1

	Char -> . L_charac                                  (rule 1)

	L_charac       shift, and enter state 2


State 2

	Char -> L_charac .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	'+='           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'-='           reduce using rule 1
	'->'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<<'           reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'>>'           reduce using rule 1
	'?'            reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	ListId -> Id .                                      (rule 84)
	ListId -> Id . '::' ListId                          (rule 85)

	'!='           reduce using rule 84
	'%'            reduce using rule 84
	'&'            reduce using rule 84
	'&&'           reduce using rule 84
	'('            reduce using rule 84
	')'            reduce using rule 84
	'*'            reduce using rule 84
	'+'            reduce using rule 84
	'++'           reduce using rule 84
	'+='           reduce using rule 84
	','            reduce using rule 84
	'-'            reduce using rule 84
	'--'           reduce using rule 84
	'-='           reduce using rule 84
	'->'           reduce using rule 84
	'.'            reduce using rule 84
	'/'            reduce using rule 84
	':'            reduce using rule 84
	'::'           shift, and enter state 28
	';'            reduce using rule 84
	'<'            reduce using rule 84
	'<<'           reduce using rule 84
	'<='           reduce using rule 84
	'='            reduce using rule 84
	'=='           reduce using rule 84
	'>'            reduce using rule 84
	'>='           reduce using rule 84
	'>>'           reduce using rule 84
	'?'            reduce using rule 84
	'['            reduce using rule 84
	']'            reduce using rule 84
	'||'           reduce using rule 84
	L_Id           reduce using rule 84


State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	ListDef -> Def . ListDef                            (rule 13)

	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'const'        shift, and enter state 13
	'double'       shift, and enter state 14
	'int'          shift, and enter state 15
	'typedef'      shift, and enter state 16
	'using'        shift, and enter state 17
	'void'         shift, and enter state 18
	L_Id           shift, and enter state 19
	%eof           reduce using rule 12

	Id             goto state 3
	Def            goto state 5
	ListDef        goto state 27
	QualConst      goto state 7
	ListId         goto state 8
	Type           goto state 9
	GenType        goto state 10

State 6

	Program -> ListDef .                                (rule 6)

	%eof           reduce using rule 6


State 7

	Type -> QualConst .                                 (rule 91)

	'&'            reduce using rule 91
	')'            reduce using rule 91
	','            reduce using rule 91
	L_Id           reduce using rule 91


State 8

	QualConst -> ListId .                               (rule 83)

	'!='           reduce using rule 83
	'%'            reduce using rule 83
	'&'            reduce using rule 83
	'&&'           reduce using rule 83
	'('            reduce using rule 83
	')'            reduce using rule 83
	'*'            reduce using rule 83
	'+'            reduce using rule 83
	'++'           reduce using rule 83
	'+='           reduce using rule 83
	','            reduce using rule 83
	'-'            reduce using rule 83
	'--'           reduce using rule 83
	'-='           reduce using rule 83
	'->'           reduce using rule 83
	'.'            reduce using rule 83
	'/'            reduce using rule 83
	':'            reduce using rule 83
	';'            reduce using rule 83
	'<'            reduce using rule 83
	'<<'           reduce using rule 83
	'<='           reduce using rule 83
	'='            reduce using rule 83
	'=='           reduce using rule 83
	'>'            reduce using rule 83
	'>='           reduce using rule 83
	'>>'           reduce using rule 83
	'?'            reduce using rule 83
	'['            reduce using rule 83
	']'            reduce using rule 83
	'||'           reduce using rule 83
	L_Id           reduce using rule 83


State 9

	GenType -> Type .                                   (rule 92)
	GenType -> Type . '&'                               (rule 94)

	'&'            shift, and enter state 26
	')'            reduce using rule 92
	','            reduce using rule 92
	L_Id           reduce using rule 92


State 10

	Def -> GenType . ListInit ';'                       (rule 8)
	Def -> GenType . Id '(' ListArg ')' '{' ListStm '}'    (rule 9)
	Def -> GenType . Id '(' ListArg ')' ';'             (rule 10)

	L_Id           shift, and enter state 19

	Id             goto state 23
	Init           goto state 24
	ListInit       goto state 25

State 11

	Type -> 'bool' .                                    (rule 87)

	'&'            reduce using rule 87
	')'            reduce using rule 87
	','            reduce using rule 87
	L_Id           reduce using rule 87


State 12

	Type -> 'char' .                                    (rule 86)

	'&'            reduce using rule 86
	')'            reduce using rule 86
	','            reduce using rule 86
	L_Id           reduce using rule 86


State 13

	GenType -> 'const' . Type                           (rule 93)
	GenType -> 'const' . Type '&'                       (rule 95)

	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'double'       shift, and enter state 14
	'int'          shift, and enter state 15
	'void'         shift, and enter state 18
	L_Id           shift, and enter state 19

	Id             goto state 3
	QualConst      goto state 7
	ListId         goto state 8
	Type           goto state 22

State 14

	Type -> 'double' .                                  (rule 88)

	'&'            reduce using rule 88
	')'            reduce using rule 88
	','            reduce using rule 88
	L_Id           reduce using rule 88


State 15

	Type -> 'int' .                                     (rule 89)

	'&'            reduce using rule 89
	')'            reduce using rule 89
	','            reduce using rule 89
	L_Id           reduce using rule 89


State 16

	Def -> 'typedef' . GenType Id ';'                   (rule 11)

	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'const'        shift, and enter state 13
	'double'       shift, and enter state 14
	'int'          shift, and enter state 15
	'void'         shift, and enter state 18
	L_Id           shift, and enter state 19

	Id             goto state 3
	QualConst      goto state 7
	ListId         goto state 8
	Type           goto state 9
	GenType        goto state 21

State 17

	Def -> 'using' . QualConst ';'                      (rule 7)

	L_Id           shift, and enter state 19

	Id             goto state 3
	QualConst      goto state 20
	ListId         goto state 8

State 18

	Type -> 'void' .                                    (rule 90)

	'&'            reduce using rule 90
	')'            reduce using rule 90
	','            reduce using rule 90
	L_Id           reduce using rule 90


State 19

	Id -> L_Id .                                        (rule 5)

	'!='           reduce using rule 5
	'%'            reduce using rule 5
	'&'            reduce using rule 5
	'&&'           reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	'++'           reduce using rule 5
	'+='           reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'--'           reduce using rule 5
	'-='           reduce using rule 5
	'->'           reduce using rule 5
	'.'            reduce using rule 5
	'/'            reduce using rule 5
	':'            reduce using rule 5
	'::'           reduce using rule 5
	';'            reduce using rule 5
	'<'            reduce using rule 5
	'<<'           reduce using rule 5
	'<='           reduce using rule 5
	'='            reduce using rule 5
	'=='           reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'>>'           reduce using rule 5
	'?'            reduce using rule 5
	'['            reduce using rule 5
	']'            reduce using rule 5
	'||'           reduce using rule 5
	L_Id           reduce using rule 5


State 20

	Def -> 'using' QualConst . ';'                      (rule 7)

	';'            shift, and enter state 36


State 21

	Def -> 'typedef' GenType . Id ';'                   (rule 11)

	L_Id           shift, and enter state 19

	Id             goto state 35

State 22

	GenType -> 'const' Type .                           (rule 93)
	GenType -> 'const' Type . '&'                       (rule 95)

	'&'            shift, and enter state 34
	')'            reduce using rule 93
	','            reduce using rule 93
	L_Id           reduce using rule 93


State 23

	Def -> GenType Id . '(' ListArg ')' '{' ListStm '}'    (rule 9)
	Def -> GenType Id . '(' ListArg ')' ';'             (rule 10)
	Init -> Id .                                        (rule 96)
	Init -> Id . '=' Exp                                (rule 97)

	'('            shift, and enter state 32
	','            reduce using rule 96
	';'            reduce using rule 96
	'='            shift, and enter state 33


State 24

	ListInit -> Init .                                  (rule 98)
	ListInit -> Init . ',' ListInit                     (rule 99)

	','            shift, and enter state 31
	';'            reduce using rule 98


State 25

	Def -> GenType ListInit . ';'                       (rule 8)

	';'            shift, and enter state 30


State 26

	GenType -> Type '&' .                               (rule 94)

	')'            reduce using rule 94
	','            reduce using rule 94
	L_Id           reduce using rule 94


State 27

	ListDef -> Def ListDef .                            (rule 13)

	%eof           reduce using rule 13


State 28

	ListId -> Id '::' . ListId                          (rule 85)

	L_Id           shift, and enter state 19

	Id             goto state 3
	ListId         goto state 29

State 29

	ListId -> Id '::' ListId .                          (rule 85)

	'!='           reduce using rule 85
	'%'            reduce using rule 85
	'&'            reduce using rule 85
	'&&'           reduce using rule 85
	'('            reduce using rule 85
	')'            reduce using rule 85
	'*'            reduce using rule 85
	'+'            reduce using rule 85
	'++'           reduce using rule 85
	'+='           reduce using rule 85
	','            reduce using rule 85
	'-'            reduce using rule 85
	'--'           reduce using rule 85
	'-='           reduce using rule 85
	'->'           reduce using rule 85
	'.'            reduce using rule 85
	'/'            reduce using rule 85
	':'            reduce using rule 85
	';'            reduce using rule 85
	'<'            reduce using rule 85
	'<<'           reduce using rule 85
	'<='           reduce using rule 85
	'='            reduce using rule 85
	'=='           reduce using rule 85
	'>'            reduce using rule 85
	'>='           reduce using rule 85
	'>>'           reduce using rule 85
	'?'            reduce using rule 85
	'['            reduce using rule 85
	']'            reduce using rule 85
	'||'           reduce using rule 85
	L_Id           reduce using rule 85


State 30

	Def -> GenType ListInit ';' .                       (rule 8)

	'bool'         reduce using rule 8
	'char'         reduce using rule 8
	'const'        reduce using rule 8
	'double'       reduce using rule 8
	'int'          reduce using rule 8
	'typedef'      reduce using rule 8
	'using'        reduce using rule 8
	'void'         reduce using rule 8
	L_Id           reduce using rule 8
	%eof           reduce using rule 8


State 31

	ListInit -> Init ',' . ListInit                     (rule 99)

	L_Id           shift, and enter state 19

	Id             goto state 72
	Init           goto state 24
	ListInit       goto state 73

State 32

	Def -> GenType Id '(' . ListArg ')' '{' ListStm '}'    (rule 9)
	Def -> GenType Id '(' . ListArg ')' ';'             (rule 10)

	')'            reduce using rule 14
	'bool'         shift, and enter state 11
	'char'         shift, and enter state 12
	'const'        shift, and enter state 13
	'double'       shift, and enter state 14
	'int'          shift, and enter state 15
	'void'         shift, and enter state 18
	L_Id           shift, and enter state 19

	Id             goto state 3
	ListArg        goto state 69
	Arg            goto state 70
	QualConst      goto state 7
	ListId         goto state 8
	Type           goto state 9
	GenType        goto state 71

State 33

	Init -> Id '=' . Exp                                (rule 97)

	'!'            shift, and enter state 60
	'('            shift, and enter state 61
	'*'            shift, and enter state 62
	'++'           shift, and enter state 63
	'--'           shift, and enter state 64
	'throw'        shift, and enter state 65
	L_charac       shift, and enter state 2
	L_doubl        shift, and enter state 66
	L_integ        shift, and enter state 67
	L_quoted       shift, and enter state 68
	L_Id           shift, and enter state 19
